<resources>
    <string name="app_name">MyNEMT</string>

    <string name="menu_home">Home</string>
    <string name="menu_current">Current trips</string>
    <string name="menu_next_day">Next Day Trips</string>
    <string name="menu_logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="assigned_vehicle_str"></string>
    <string name="welcome_nemt_bot">Welcome NEMT BOT</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>

    <string name="place_holder_time">00:00:00</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="company_code">Company Code</string>
    <string name="enter_user_name">Name</string>
    <string name="enter_password">Password</string>

    <string name="driver_name">faran.ali</string>
    <string name="driver_password">manager</string>
    <string name="comp_code">android</string>

    <string name="tab_trips">Trips</string>
    <string name="tab_completed">Completed</string>
    <string name="no_schedule">There is no Schedule Trips.</string>

</resources>