<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mynemt.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_current"
        android:name="com.example.mynemt.ui.current.CurrentDayFragment"
        android:label="@string/menu_current"
        tools:layout="@layout/fragment_current_day" />

    <fragment
        android:id="@+id/nav_next_day"
        android:name="com.example.mynemt.ui.nextday.NextDayFragment"
        android:label="@string/menu_next_day"
        tools:layout="@layout/fragment_next_day" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.mynemt.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

</navigation>