<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/linearLayoutMainHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_color"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textViewAssignedVehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assigned_vehicle_str"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00:00"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonClock"
            android:layout_width="180dp"
            android:layout_height="62dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_reactangle"
            android:text="@string/clock_in"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/buttonBreak"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_reactangle"
            android:enabled="false"
            android:text="Break"
            android:textColor="@color/black"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/welcome_nemt_bot"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>