<?xml version="1.0" encoding="utf-8"?><!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="180dp"
        android:layout_height="230dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/val_40_dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo">

        <LinearLayout
            android:id="@+id/layoutLoginHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <TextView
                android:id="@+id/tvLoginHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/blue"
                android:textSize="28sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/credentialsScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayoutLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/outlinedTextFieldCompanyCode"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/company_code">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@string/comp_code" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/outlinedTextFieldLoginName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_user_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@string/driver_name" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/outlinedTextFieldLoginPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:text="@string/driver_password" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:id="@+id/checkboxRememberMe"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="20dp"
                        android:buttonTint="@color/base_color"
                        android:text="Remember me"
                        android:textColor="@color/textColor"
                        android:textSize="14dp" />

                    <Button
                        android:id="@+id/buttonDriverLogin"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="40dp"
                        android:background="@drawable/shape_reactangle"
                        android:backgroundTint="@color/base_color"
                        android:text="Login"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayoutLoginDesign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="230dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayoutLoginDesign"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/layoutLoginHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <TextView
                android:id="@+id/tvLoginHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/blue"
                android:textSize="28sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/credentialsScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayoutLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/outlinedTextFieldCompanyCode"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/company_code">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@string/comp_code" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/outlinedTextFieldLoginName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_user_name"
                        android:layout_marginTop="@dimen/val_10_dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@string/driver_name" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/outlinedTextFieldLoginPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        app:endIconMode="password_toggle"
                        android:layout_marginTop="@dimen/val_10_dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:text="@string/driver_password" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:id="@+id/checkboxRememberMe"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="20dp"
                        android:buttonTint="@color/base_color"
                        android:text="Remember me"
                        android:textColor="@color/textColor"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/buttonDriverLogin"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="40dp"
                        android:background="@drawable/shape_reactangle"
                        android:backgroundTint="@color/base_color"
                        android:text="Login"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>